refresh token flow for spotify ok, need to find a way to preserve playlist even if user login late in the process

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,4 +19,8 @@
   .title {
     @apply text-3xl font-thin text-left 
   }
+
+  .container{
+    @apply h-auto w-3/4 mx-auto flex flex-col gap-5 mt-16 text-gray-400 
+  }
 }
