clean store after creation, page success OK

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,4 +23,8 @@
   .container{
     @apply h-auto w-3/4 mx-auto flex flex-col gap-5 mt-16 text-gray-400 
   }
+
+  .link_text{
+    @apply text-gray-300 font-semibold hover:text-gray-200 cursor-pointer
+  }
 }
