now get multiple result from spotify API, use can choose on before convert

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,4 +27,8 @@
   .link_text{
     @apply text-gray-300 font-semibold hover:text-gray-200 cursor-pointer
   }
+
+  .divider {
+    @apply border-0 border-t border-gray-600
+  }
 }
